# llm_eda

./: .gitignore  config.yaml  config_optimized.yaml  eda_pipeline.py  eda_pipeline_optimized.py  pyproject.toml  run_eda.py  run_eda_optimized.py
lib/llm_parallelization/: pyproject.toml
lib/llm_parallelization/src/llm_parallelization/: __init__.py  new_processor.py
prompts/: __init__.py  base.py  compression.py  elaboration.py  formality_shift.py  noise_injection.py  paraphrase.py  sentence_restructure.py  style_rewrite.py  synonym_replace.py
