[project]
name = "llm-parallelization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Clyde Belasso", email = "cbelasso@explorance.com" }
]
requires-python = ">=3.13"
dependencies = [
    "vllm==0.10.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build]
package = "src/llm_parallelization"
